--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Configure AWS credentials from AWS account
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ steps.set-vars.outputs.role_ar }}
+          role-to-assume: ${{ steps.set-vars.outputs.role_arn }}
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
